# MoirAI

./: .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_COMPLETE_GUIDE.md  ANALYTICS_COMPLETION_REPORT.md  ANALYTICS_QUICK_REFERENCE.md  ARCHITECTURE_COMPARISON.md  AREAS_DE_OPORTUNIDAD.md  AREAS_DE_OPORTUNIDAD_CONSOLIDADAS.md  BENCHMARK_NLP_SERVICES_HARVARD.md  BILINGUAL_CACHE_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  COLLAPSIBLE_IMPLEMENTATION_CHECKLIST.md  COLLAPSIBLE_SIDEBAR_SUMMARY.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_TEMPLATE.md  COMPLETION_SUMMARY.md  DASHBOARD_REFACTORED_ROLE_ADAPTER.md  DEPLOYMENT_PLAN_CONSOLIDACION.md  DEPURACION_COMPLETADA_RESUMEN.md  DEPURACION_DOCUMENTACION_ANALISIS.md  DEPURACION_ENDPOINTS_FINAL.md  DEPURACION_ENDPOINTS_RESUMEN.md  DEPURACION_INFORME_TECNICO_FINAL.md  DEPURACION_PARA_USUARIO.md  DEPURACION_RESUMEN_EJECUTIVO.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_ENDPOINTS.md  Dockerfile  ENDPOINTS_CHEAT_SHEET.md  ENDPOINTS_CLEANUP_STATUS.md  ENDPOINTS_CONSOLIDATION_SUMMARY.md  ENDPOINTS_JOB_SCRAPING_VS_JOBS_ANALYSIS.md  ENDPOINTS_QUICK_ANSWER.md  ENDPOINTS_VISUAL_ARCHITECTURE.md  ENDPOINTS_VISUAL_SUMMARY.md  ESTADO_ROUTERS_FINAL.md  EXECUTION_GUIDE.md  FASE2_CONCLUSION.md  (+143 more)
.github/: copilot-instructions.md
app/: __init__.py  main.py
cv_simulator/: README.md  cv_classifier_demo.py  generate_cvs.py  nlp_analysis.py  test_generated_cvs.py
docs/: ANALYTICS_BACKEND_INTEGRATION.md  ANALYTICS_DASHBOARD_SUMMARY.md  ANALYTICS_DOCUMENTATION_INDEX.md  ANALYTICS_USAGE_GUIDE.md  API_KEYS_SYSTEM.md  INDEX.md  (+48 more)
(+185 files in other folders)
