[metadata]
name = moirai
version = 0.0.0
description = MoirAI package (local editable install for tests)
author = MoirAI Team

[options]
packages = find:
; install_requires are managed via requirements.txt for local development.
; Leave empty here to avoid setuptools parsing issues when building editable installs.

